[package]
name = "tdf-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tdf_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
ephemeral-rollups-sdk = { version = "0.3.5", features = ["anchor"] }
pyth-solana-receiver-sdk = "0.6.0"
magicblock-permission-client = { path = "../../rust" }
